--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,45 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>se.inera.certificate.lab</groupId>
-  <artifactId>webjars-parent</artifactId>
-  <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>Inera Certificate Lab Webjars Parent</name>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>se.inera.certificate.lab</groupId>
+    <artifactId>webjars-parent</artifactId>
+    <packaging>pom</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>Inera Certificate Lab Webjars Parent</name>
 
-  <modules>
-    <module>portal</module>
-    <module>module-support</module>
-    <module>module1</module>
-  </modules>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <modules>
+        <module>portal</module>
+        <module>module-support</module>
+        <module>module1</module>
+    </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.0.1.v20130408</version>
+                    <configuration>
+                        <systemProperties>
+                            <systemProperty>
+                                <name>jetty.port</name>
+                                <value>9088</value>
+                            </systemProperty>
+                            <systemProperty>
+                                <name>java.awt.headless</name>
+                                <value>true</value>
+                            </systemProperty>
+                        </systemProperties>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
